feat: add new info to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
              Belarusian National State University 1998-2004
             </p>
           </section>
+
+
+          <section class="about-code">
+            <h3>Examlpe code</h3>
+            <p>
+                <pre>
+                const name=prompt("Hi, what is your name?");
+                alert("Nice to meet you "+name);
+                </pre>
+            </p>
+          </section>
 		  
 		  
           <section class="about-lang">
@@ -80,7 +91,8 @@
       </main>
 	  
 	  
-      <footer class="footer">
+      <footer class="container footer">
+
         <a href="https://github.com/Dimiuss81">
           <img src="img/GitHubLogo.png" alt="GitHub Logo" title="My Github" />
         </a>
